fix align-items for navigation-user list

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,17 +61,19 @@ body {
 }
 
 .button {
+    padding: 8px 50px;
     display: inline-block;
-    box-sizing: border-box;
     background-color: #756157;
     border-radius: 4px;
+    border-color: transparent;
     color: #ffffff;
+    font-family: "PT Sans", sans-serif;
     font-size: 16px;
     line-height: 20px;
     text-transform: uppercase;
+    text-decoration: none;
     text-align: center;
-    min-width: 140px;
-    height: 36px;
+    cursor: pointer;
 }
 
 .navigation {
@@ -95,13 +97,13 @@ body {
 }
 
 .navigation-user {
+    align-items: center;
     padding: 0;
     width: 300px;
     list-style: none;
     margin: 0 0 0 auto;
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
     justify-content: flex-end;
 }
 
@@ -111,6 +113,7 @@ body {
 }
 
 .navigation-link {
+    margin: 0;
     display: block;
     font-family: "PT Sans", sans-serif;
     font-weight: 700;
@@ -151,6 +154,16 @@ body {
     color: #ffffff;
     margin: 0;
     padding: 5px;
+}
+
+.button-link {
+    margin: 0;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 8px 34px;
+    color: #ffffff;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .page-container {
@@ -250,6 +263,10 @@ body {
     padding-bottom: 64px;
 }
 
+.advantages {
+    margin-bottom: 96px;
+}
+
 .advantages-list {
     margin: 0;
     padding: 0;
@@ -317,9 +334,8 @@ body {
 }
 
 .to-catalog {
-    margin: 0;
+    margin: 0 auto 96px;
     text-align: center;
-    padding: 96px;
 }
 
 .to-catalog-title {
@@ -587,10 +603,17 @@ body {
     border: 0;
     margin: 0;
     padding: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 32px;
+    display: flex;
+    flex-wrap: wrap;
     width: 290px;
+}
+
+.price-title {
+    width: 100%;
+}
+
+.price-min, .price-max {
+    width: 50%;
 }
 
 .price-input {
@@ -598,8 +621,13 @@ body {
 }
 
 .price-slider {
-    margin: 0;
+    margin-top: auto;
     padding: 0;
+    width: 100%;
+}
+
+.price-slider input {
+    width: 100%;
 }
 
 .buttons-container {
@@ -791,20 +819,18 @@ body {
 }
 
 .product-card-button {
-    text-decoration: none;
     box-sizing: border-box;
-    font-family: "PT Sans", sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    padding-top: 8px;
+    padding: 8px 26px;
 }
 
 .button-add-favorite {
     background-color: #82B3D3;
+    padding: 8px 20px;
 }
 
 .button-favorite-selected {
     background-color: #7DB54F;
+    padding: 8px 18px;
 }
 
 .rating {
